updated using fa class

--- a/html_assignment/register.css
+++ b/html_assignment/register.css
@@ -89,10 +89,23 @@ ul{
   font-size: 15px;
 }
 
+#b4{
+  background-color: lightblue;
+  color: darkblue;
+  font-size: 20px
+  width: 400px;
+  height: 35px;
+  border: 3px solid darkblue;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-bottom: 10px;
+}
+
 .section-left
 {
   float: left;
   color: black;
+  height: auto
 }
 
 .section-right
@@ -101,7 +114,7 @@ ul{
   background-color: white;
   border: 1px solid black;
   width: 50%;
-  height: 450px;
+  height: auto;
 }
 
 .section-inside {
