footer style edited

--- a/html_assignment/register.css
+++ b/html_assignment/register.css
@@ -4,7 +4,7 @@
     padding: 0;
     font-family:"Times New Roman", Times, serif;
   }
-.header-style
+.main-header
 {
   background-color: black;
   text-decoration-color: white;
@@ -15,8 +15,8 @@
 
 #psswd
 {
-  width: 350px;
-  height: 40px;
+  /* width: 350px;
+  height: 40px; */
   border: 4px solid black;
 
 }
@@ -25,14 +25,18 @@ td{
   margin-bottom: 10px;
 
 }
-#input-type
-{
-height: 40px;
-border: 4px solid black;
+form input {
+  border: 2px solid #bac7d0;
+  font-size: 12px!important;
+  padding: 15px 15px!important;
+  margin-bottom: 6.5px;
+  margin-top: 6.5px;
+  border-color: #c3cfd2!important;
+  width: 100%;
  }
 
 .footer {
-margin-top: 570px;
+
 height: 100px;
 background-color: lightblue;
 color: white;
@@ -40,7 +44,7 @@ text-align: center;
 color: black;
 }
 
-.section-style
+.section-top
 {
   background-color: #f1f1f1;
   height: 100px;
@@ -103,8 +107,7 @@ ul{
   margin-bottom: 10px;
 }
 
-.section-left
-{
+.section-left {
   float: left;
   color: black;
   height: auto
@@ -114,11 +117,23 @@ ul{
 {
   float: right;
   background-color: white;
-  border: 1px solid black;
   width: 50%;
   height: auto;
+  padding: 30px;
 }
 
-.section-inside {
+.section-middle {
   margin-top: 50px;
+}
+
+.policy-section {
+  padding: 15px;
+}
+
+@media (max-width: 768px) {
+  .section-left,
+  .section-right {
+    width: 100%;
+    float: none;
+  }
 }
