--- a/html_assignment/register.css
+++ b/html_assignment/register.css
@@ -13,12 +13,14 @@
   height: 70px;
  }
 
-#psswd
-{
-  /* width: 350px;
-  height: 40px; */
-  border: 4px solid black;
-
+#psswd {
+  border-color: #c3cfd2!important;
+}
+hr.pass{
+  border-radius: 4px;
+   border: 5px solid grey;
+   width: 230%;
+   margin-left: +15%;
 }
 
 td{
@@ -44,10 +46,9 @@ text-align: center;
 color: black;
 }
 
-.section-top
-{
+.section-top {
   background: #f1f1f1;
-  height:auto;
+  height:50%;
   width: 100%;
   color: #313945;
   padding-bottom: 50px;
@@ -55,6 +56,9 @@ color: black;
   margin: none;
   padding-top: +25px;
 
+}
+li{
+  padding: 5px 0;
 }
 
 #h3-font
@@ -86,8 +90,13 @@ ul{
   background-color: darkblue;
   color: white;
   width: 170px;
-  height: 45px;
+  height: 40px;
   font-size: 15px;
+  margin: 10px 0px;
+  text-align:center;
+  border-radius: 8px;
+  margin-right: +280px;
+
 }
 
 #b2
@@ -126,20 +135,24 @@ ul{
 .section-left {
   float: left;
   color: black;
-  height: auto
+  height: auto;
+  margin-left:10%;
 }
 
 .section-right
 {
   float: right;
   background-color: white;
-  width: 50%;
+  width:45%;
   height: auto;
   padding: 30px;
+  margin-right: 20px;
+  box-shadow:3px 3px 3px 3px #5f80a2;
+  text-align: center;
 }
 
 .section-middle {
-  margin-top: 50px;
+margin-top: -2.5%;
 }
 
 .policy-section {
