--- a/html_assignment/register.css
+++ b/html_assignment/register.css
@@ -35,7 +35,7 @@ hr.pass{
   display: flex;
  flex-flow:row wrap;
 }
-form input {
+.forminput {
   border: 2px solid #bac7d0;
   font-size: 12px!important;
   padding: 15px 15px!important;
@@ -45,6 +45,10 @@ form input {
   width: 100%;
  }
 
+.chkbox{
+  margin-left:-5%;
+  font-style:normal;
+}
 .footer {
 
 height:25%x;
@@ -108,6 +112,7 @@ padding: 25px 0px 10px 0px;
   width: 350px;
   height: 45px;
   font-size: 15px;
+  margin-bottom: +5px;
 }
 
 .container{
@@ -120,6 +125,7 @@ padding: 25px 0px 10px 0px;
   width: 350px;
   height: 45px;
   font-size: 15px;
+  margin-top: -5px;
 }
 
 #b4{
@@ -158,7 +164,8 @@ margin-top: -2.5%;
 }
 
 .policy-section {
-  padding: 15px;
+  margin-top: 10px;
+  align-items: left;
 }
 
 @media (max-width: 768px) {
