applied patch file

--- a/html_assignment/register.css
+++ b/html_assignment/register.css
@@ -1,18 +1,21 @@
-
-*{
-    margin: 0;
-    padding: 0;
-    font-family:"Times New Roman", Times, serif;
-  }
-.main-header
-{
+* {
+  margin: 0;
+  padding: 0;
+  font-family:"Times New Roman", Times, serif;
+}
+.main-content {
+  padding-bottom: 50px;
+}
+.main-header {
   background-color: black;
   text-decoration-color: white;
   color: white;
   text-align: center;
-  height: 70px;
- }
-
+  padding-top: 28px;
+}
+.main-header p {
+  font-size: 20px;
+}
 #psswd {
   border-color: #c3cfd2!important;
 }
@@ -27,7 +30,6 @@ hr.pass{
   font-size: 15px;
   width: 30%;
   line-height: 20px;
-
 }
 
 .password-status ul{
