--- a/html_assignment/register.css
+++ b/html_assignment/register.css
@@ -46,10 +46,7 @@ hr.pass{
    text-align: left;
    width: 100%;
 }
-.foot-img{
-  display: flex;
-  flex-flow:row wrap;
-}
+
 
 .forminput {
   border: 2px solid #bac7d0;
@@ -62,13 +59,14 @@ hr.pass{
  }
 
 .chkbox{
-  margin-left:-5%;
+  width: 100%;
   font-weight: 100;
+  align-s;
 }
 
 .footer {
 height:25%x;
-background-color: lightblue;
+background-color: #eef2f3;
 color: white;
 text-align: center;
 color: black;
@@ -125,7 +123,7 @@ padding: 25px 0px 10px 0px;
 {
   background-color: yellow;
   color: black;
-  width: 350px;
+  width: 100%;
   height: 45px;
   font-size: 15px;
   margin-bottom: +5px;
@@ -138,14 +136,15 @@ padding: 25px 0px 10px 0px;
 {
   background-color:black;
   color: white;
-  width: 350px;
+  width: 100%;
   height: 45px;
   font-size: 15px;
   margin-top: -5px;
+
 }
 
 #b4{
-  background-color: #bac0c1;
+  background-color: #eef2f3;
   color: darkblue;
   font-size: 20px
   width: 400px;
@@ -154,6 +153,7 @@ padding: 25px 0px 10px 0px;
   padding-left: 10px;
   padding-right: 10px;
   margin-bottom: 10px;
+    border-radius: 4px;
 }
 
 .section-left {
