--- a/html_assignment/register.css
+++ b/html_assignment/register.css
@@ -127,9 +127,10 @@ padding: 25px 0px 10px 0px;
   background-color: yellow;
   color: black;
   width: 100%;
-  height: 45px;
+  height: 55px;
   font-size: 15px;
   margin-bottom: +5px;
+  font-weight: bolder;
 }
 
 .b2:hover{
@@ -140,10 +141,11 @@ padding: 25px 0px 10px 0px;
 
 }
 .b3{
+  font-weight: bolder;
   background-color:white;
   color: black;
   width: 100%;
-  height: 45px;
+  height: 55px;
   font-size: 15px;
   margin-top: -5px;
   border: 4px solid black;
