--- a/html_assignment/register.css
+++ b/html_assignment/register.css
@@ -137,6 +137,9 @@ padding: 25px 0px 10px 0px;
   background-color: black;
   color: white;
 }
+.fa-google{
+margin-right: +10px; 
+}
 .container{
 
 }
