--- a/php-mysql_assignment/login.css
+++ b/php-mysql_assignment/login.css
@@ -1,23 +1,46 @@
-*{
-  font-family: serif;
-  margin: 0;
-  padding: 0;
-  font-family:"Times New Roman", Times, serif;
-}
-div{
+body {font-family: Arial, Helvetica, sans-serif;}
+* {box-sizing: border-box;}
 
-align: center;
-background-color: cyan;
-width: 50%;
-border-radius: 4px;
-margin-left: +25%;
-margin-top: +5%;
-padding-left: 0;
-padding-bottom: 5px;
+.input-container {
+  display: -ms-flexbox; /* IE10 */
+  display: flex;
+  width: 100%;
+  margin-bottom: 15px;
 }
 
-.main{
- 
- width: auto;
-padding-left: 0;
+.icon {
+  padding: 10px;
+  background: dodgerblue;
+  color: white;
+  min-width: 50px;
+  text-align: center;
+}
+
+.input-field {
+  width: 100%;
+  padding: 10px;
+  outline: none;
+}
+
+.input-field:focus {
+  border: 2px solid dodgerblue;
+}
+
+/* Set a style for the submit button */
+.btn {
+  background-color: dodgerblue;
+  color: white;
+  padding: 15px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  opacity: 0.9;
+}
+
+.btn:hover {
+  opacity: 1;
+}
+.signin {
+  background-color: #f1f1f1;
+  text-align: center;
 }
