--- a/php-mysql_assignment/login.css
+++ b/php-mysql_assignment/login.css
@@ -2,7 +2,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 * {box-sizing: border-box;}
 
 .input-container {
-  display: -ms-flexbox; /* IE10 */
+  display: -ms-flexbox;
   display: flex;
   width: 100%;
   margin-bottom: 15px;
@@ -43,4 +43,57 @@ body {font-family: Arial, Helvetica, sans-serif;}
 .signin {
   background-color: #f1f1f1;
   text-align: center;
+}
+
+input[type=text], input[type=password], input[type=number], input[type=email] {
+  width: 50%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  display:list-item;
+  border: none;
+  background: #f1f1f1;
+}
+
+/* Add a background color when the inputs get focus */
+input[type=text]:focus, input[type=password]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+/* Set a style for all buttons */
+button {
+  background-color: #04AA6D;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 50%;
+  opacity: 0.9;
+}
+
+button:hover {
+  opacity:1;
+}
+
+.container {
+  padding: 16px;
+}
+
+
+hr {
+  border: 1px solid #f1f1f1;
+  margin-bottom: 25px;
+}
+
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+@media screen and (max-width: 300px) {
+    .signupbtn {
+     width: 50%;
+  }
 }
