--- a/html_assignment/php-mysql/login.css
+++ b/html_assignment/php-mysql/login.css
@@ -1,8 +1,12 @@
+* {
+  box-sizing: border-box;
+}
 body {
   font-family: Arial, Helvetica, sans-serif;
  }
-* {
-  box-sizing: border-box;
+h2{
+
+  margin-top: +50px !important;
 }
 
 .input-container {
@@ -10,20 +14,24 @@ body {
   display: flex;
   width: 100%;
   margin-bottom: 15px;
+
 }
 
 .icon {
-  padding: 10px;
+  padding: 19px;
+  margin-top: 5px;
   background: dodgerblue;
   color: white;
   min-width: 50px;
+  height: 55px;
   text-align: center;
 }
 
 .input-field {
-  width: 100%;
+  width: 100% !important;
   padding: 10px;
   outline: none;
+  height: 55px;
 }
 
 .input-field:focus {
@@ -37,8 +45,12 @@ body {
   padding: 15px 20px;
   border: none;
   cursor: pointer;
-  width: 100%;
+  width: 80%;
   opacity: 0.9;
+  margin-left: +10%;
+  margin-bottom: 10px;
+
+
 }
 
 .btn:hover {
@@ -79,14 +91,28 @@ button:hover {
   opacity:1;
 }
 
-.container {
+.container1 {
   padding: 16px;
+  margin-left: +25%;
 }
+.accform{
+  width: 100%;
+  height: 100%;
 
 
+}
+.login-form{
+  margin-top: +40%;
+}
+.container-signin{
+  width: 80%;
+  margin-left: +30%;
+}
 hr {
-  border: 1px solid #f1f1f1;
+  border: 5px solid black;
   margin-bottom: 25px;
+  width: 50%;
+  margin-left: 0px;
 }
 
 .clearfix::after {
