--- a/ajax/login.css
+++ b/ajax/login.css
@@ -108,6 +108,11 @@ button:hover {
   width: 80%;
   margin-left: +30%;
 }
+.container-login{
+  text-align: center;
+  width: 50%;
+  padding: 10px;
+}
 hr {
   border: 5px solid black;
   margin-bottom: 25px;
