--- a/andriod app/BasicApp2/app/src/main/res/layout/activity_create_blog.xml
+++ b/andriod app/BasicApp2/app/src/main/res/layout/activity_create_blog.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:minWidth="100dp"
-    tools:context=".RegisterActivity">
+    tools:context=".CreateBlogActivity">
 
     <TextView
         android:id="@+id/textView2"
@@ -75,14 +74,14 @@
         android:id="@+id/spinner1"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="285dp"
+        android:layout_marginTop="11dp"
         android:layout_marginEnd="9dp"
-        android:layout_marginBottom="76dp"
+        android:layout_marginBottom="13dp"
         android:minHeight="48dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView"
+        app:layout_constraintBottom_toBottomOf="@+id/editText4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView7"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText3"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
@@ -112,9 +111,8 @@
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="168dp"
-        android:layout_marginBottom="52dp"
-        android:onClick="onSaveClick"
+        android:layout_marginBottom="53dp"
+        android:onClick="onSveClick"
         android:text="save"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -170,15 +168,20 @@
         app:layout_constraintTop_toBottomOf="@+id/textView8"
         tools:ignore="TouchTargetSizeCheck" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="1dp"
-        android:layout_marginBottom="160dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/button4"
-        app:layout_constraintTop_toBottomOf="@+id/spinner1"
-        app:srcCompat="@drawable/ic_launcher_foreground" />
+    <EditText
+        android:id="@+id/editText5"
+        android:layout_width="189dp"
+        android:layout_height="103dp"
+        android:layout_marginTop="61dp"
+        android:layout_marginBottom="61dp"
+        android:ems="10"
+        android:gravity="start|top"
+        android:inputType="textMultiLine"
+        app:layout_constraintBottom_toBottomOf="@+id/button3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button4"
+        tools:ignore="SpeakableTextPresentCheck" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
