added logout function

--- a/andriod app/Blog/app/src/main/res/layout/activity_create_blog.xml
+++ b/andriod app/Blog/app/src/main/res/layout/activity_create_blog.xml
@@ -12,7 +12,7 @@
         android:layout_height="31dp"
         android:layout_marginStart="15dp"
         android:layout_marginTop="29dp"
-        android:layout_marginEnd="26dp"
+        android:layout_marginEnd="33dp"
         android:layout_marginBottom="14dp"
         android:text="Title"
         app:layout_constraintBottom_toBottomOf="@+id/title"
@@ -25,18 +25,21 @@
         android:layout_width="0dp"
         android:layout_height="20dp"
         android:layout_marginStart="15dp"
-        android:layout_marginEnd="35dp"
+        android:layout_marginTop="124dp"
+        android:layout_marginEnd="43dp"
+        android:layout_marginBottom="126dp"
         android:text="Body"
-        app:layout_constraintBaseline_toBaselineOf="@+id/body"
+        app:layout_constraintBottom_toBottomOf="@+id/email"
         app:layout_constraintEnd_toStartOf="@+id/body"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="57dp"
+        android:layout_marginEnd="71dp"
         android:layout_marginBottom="38dp"
         android:text="Email"
         app:layout_constraintBottom_toTopOf="@+id/textView6"
@@ -47,15 +50,13 @@
         android:id="@+id/email"
         android:layout_width="0dp"
         android:layout_height="46dp"
-        android:layout_marginTop="118dp"
-        android:layout_marginEnd="81dp"
-        android:layout_marginBottom="113dp"
+        android:layout_marginEnd="67dp"
+        android:layout_marginBottom="21dp"
         android:ems="10"
         android:inputType="textEmailAddress"
-        app:layout_constraintBottom_toBottomOf="@+id/spinner1"
+        app:layout_constraintBottom_toTopOf="@+id/spinner1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView5"
-        app:layout_constraintTop_toTopOf="@+id/body"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
     <TextView
@@ -63,8 +64,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="6dp"
-        android:layout_marginEnd="11dp"
+        android:layout_marginEnd="25dp"
         android:text="Blog Category"
         app:layout_constraintEnd_toStartOf="@+id/spinner1"
         app:layout_constraintStart_toStartOf="parent"
@@ -73,15 +73,15 @@
     <Spinner
         android:id="@+id/spinner1"
         android:layout_width="0dp"
-        android:layout_height="102dp"
-        android:layout_marginTop="175dp"
-        android:layout_marginEnd="9dp"
-        android:layout_marginBottom="176dp"
+        android:layout_height="52dp"
+        android:layout_marginTop="291dp"
+        android:layout_marginEnd="21dp"
+        android:layout_marginBottom="291dp"
         android:minHeight="48dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintBottom_toTopOf="@+id/button3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView6"
-        app:layout_constraintTop_toTopOf="@+id/body"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
@@ -90,9 +90,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="38dp"
-        android:layout_marginBottom="299dp"
+        android:layout_marginBottom="30dp"
         android:text="Select an Image:"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/imageView1"
         app:layout_constraintEnd_toStartOf="@+id/button4"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -112,7 +112,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="29dp"
-        android:layout_marginEnd="87dp"
+        android:layout_marginEnd="79dp"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
@@ -124,20 +124,19 @@
         android:id="@+id/body"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="88dp"
+        android:layout_marginEnd="79dp"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/title"
+        app:layout_constraintTop_toTopOf="@+id/textView4"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
     <Button
         android:id="@+id/button4"
         android:layout_width="0dp"
         android:layout_height="40dp"
-        android:layout_marginEnd="89dp"
+        android:layout_marginEnd="88dp"
         android:onClick="onSelectClick"
         android:text="Select Image"
         app:layout_constraintBottom_toBottomOf="@+id/textView8"
@@ -147,15 +146,17 @@
         tools:ignore="TouchTargetSizeCheck" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageView1"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginStart="151dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="151dp"
-        app:layout_constraintEnd_toEndOf="@+id/spinner1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button4"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="119dp"
+        android:layout_marginEnd="72dp"
+        android:layout_marginBottom="120dp"
+        app:layout_constraintBottom_toBottomOf="@+id/button3"
+        app:layout_constraintEnd_toEndOf="@+id/button4"
+        app:layout_constraintStart_toEndOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/spinner1"
         app:srcCompat="@drawable/ic_launcher_foreground"
         tools:ignore="VectorDrawableCompat" />
 
@@ -163,7 +164,7 @@
         android:id="@+id/Logout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="54dp"
+        android:layout_marginEnd="53dp"
         android:layout_marginBottom="49dp"
         android:onClick="onLogOutClick"
         android:text="Logout"
